--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gulp-react-module-tasks",
   "version": "1.0.0",
   "description": "Common tasks for create react modules with Gulp + Browserify",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,12 +19,18 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.21.0",
+    "babel-plugin-transform-class-properties": "^6.19.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
+    "browser-sync": "^2.18.6",
     "browserify": "^13.3.0",
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.8",
-    "vinyl-source-stream": "^1.1.0"
+    "persistify": "^1.1.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.8.0"
   }
 }
